--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
     requests
     plugable
     py-radix
+    py-mini-racer
 commands = pytest {posargs}
 
 [testenv:flake8]
@@ -20,6 +21,7 @@ deps =
     requests
     plugable
     py-radix
+    py-mini-racer
 
 [testenv:test_coverage]
 passenv = TRAVIS TRAVIS_*
@@ -32,6 +34,7 @@ deps =
     requests
     plugable
     py-radix
+    py-mini-racer
 
 commands =
     pytest --cov=src/hyron {posargs}
